--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="referrer" content="origin">
 <meta name="theme-color" content="#000000">
 <link rel="alternate" hreflang="uk-UA" href="https://1xbet-ua.github.io/">
+<link rel="alternate" hreflang="en" href="https://1xbet-ua.github.io/en/">
 <link rel="alternate" hreflang="ro" href="https://1xbet-ua.github.io/ro/">
 <link rel="alternate" hreflang="pl" href="https://1xbet-ua.github.io/pl/">
 <link rel="alternate" hreflang="nl" href="https://1xbet-ua.github.io/nl/">
